packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__cloud_connection_status_connected.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                                                      "
" NX    Running Test Tasks...                                                                                                          Cache   Duration"
"                                                                                                                                                      "
"                                                                                                                                                      "
"> ·    app1:build                                                                                                                       ...        ..."
"  ·    app1:test                                                                                                                        ...        ..."
"  ·    app2:lint                                                                                                                        ...        ..."
"                                                                                                                                                      "
"                                                                                                                                                      "
"                                                                                                                                                      "
"                                                                                                                                                      "
"                                                                                                                                                      "
"                                                                                                                                                      "
"                                                                                                                                                      "
"● Nx Cloud: connected                                             quit: q  help: ?  navigate: ↑ ↓  filter: /  pin output: 1 or 2  show output: <enter>"
