packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__cloud_connection_status_narrow_uses_short_text.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                             "
" NX    Running Test Tasks..  Cache   Duration"
"                                             "
"                                             "
"> ·    app1:build              ...        ..."
"  ·    app1:test               ...        ..."
"  ·    app2:lint               ...        ..."
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"                                             "
"Not connected                quit: q  help: ?"
