packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__cloud_message_rendering.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Completed Test Tasks                                                                             Cache   Duration"
"                                                                                                                        "
"> ✖    app1:build                                                                                           -        ..."
"  ✔    app1:test                                                                                            -        ..."
"  ✔    app2:lint                                                                                            -        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"View logs and run details at https://nx.app/runs/KnGk4A47qk                                             quit: q  help: ?"
