packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__completed_tasks_with_different_durations.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
" NX    Completed Test Tasks (1m 0s)                                                                     Cache   Duration"
"                                                                                                                        "
"> ✔    app1:test                                                                                            -       2.0s"
"  ✔    app1:build                                                                                           -      10.0s"
"  ✔    app2:lint                                                                                            -      1m 0s"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                    quit: q  help: ?  navigate: ↑ ↓  filter: /  pin output: 1 or 2  show output: <enter>"
