packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__continuous_task.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                                                                                                        "
"       Test Tasks                                                                                       Cache   Duration"
" │                                                                                                                      "
">│⠋    app3:serve                                                                                           - Continuous"
" │·    Waiting for task...                                                                                              "
" └                                                                                                                      "
"  ·    app1:build                                                                                         ...        ..."
"  ·    app1:test                                                                                          ...        ..."
"  ·    app2:lint                                                                                          ...        ..."
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
