packages/nx/src/native/tui/components/snapshots/nx__native__tui__components__tasks_list__tests__deep_scrolling_narrow_terminal.snap
---
source: packages/nx/src/native/tui/components/tasks_list.rs
expression: terminal.backend()
---
"                                        "
"       Test Tasks            Duration   "
"                                       ↑"
"                                       █"
"> ·    app100:test                ...  ║"
"  ·    app10:test                 ...  ↓"
